# CDCache

./: .gitignore  CMakeLists.txt  README.md
apps/: main_cache_app.cpp
apps/tools/: data_hash_generator.cpp  trace_analyzer.cpp  trace_generator.cpp
src/: baseline_cache.cpp  block_detector.cpp  cd_cache.cpp  config.cpp  data_block.cpp  data_block_buffer.cpp  device.cpp  io_request.cpp  page_manager.cpp  ssd_proxy.cpp  storage_system.cpp
src/compression/: lz77_comperssor.cpp  main_compressor.cpp  pair_serializer.cpp
src/include/: abstract_cache.h  abstract_counter.h  baseline_cache.h  block_detector.h  cache_policy.h  cacheline_index.h  cd_cache.h  config.h  data_block.h  data_block_buffer.h  deletable_bloom_filter.h  device.h  fp_index.h  io_request.h  lba_index.h  lz77_compressor.h  main_compressor.h  page_manager.h  pair_serializer.h  ssd_proxy.h  storage_system.h  trace_reader.h  utils.h
src/index/: cacheline_index.cpp  fp_index.cpp  lba_index.cpp
src/tools/: trace_reader.cpp  utils.cpp
third/: bitstream.h
third/catch2/: catch_amalgamated.cpp
